<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/forma_cor_gradiente_padrao"
    tools:context=".ELogicaReceitaVegana">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/titulo_receitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_receitas"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="24dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/txvResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/introdução_receitas"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txv_recomendacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textAlignment="center"
            android:text="@string/introdução_receitas2"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="24dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/txvOpcao1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcao1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imagem1" />

        <Button
            android:id="@+id/btn_verreceita1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cor_azul_royal"
            android:text="@string/ver_receita"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="24dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/txvOpcao2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/opcao2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imagem2" />

        <Button
            android:id="@+id/btn_verreceita2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cor_azul_royal"
            android:text="@string/ver_receita"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="24dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/opcao3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcao3"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/chatgpt_image_16_de_out__de_2025__18_12_42" />

        <Button
            android:id="@+id/btn_verreceita3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cor_azul_royal"
            android:text="@string/ver_receita"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="24dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/txvRespQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lembrete"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnVerQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cor_azul_royal"
            android:text="@string/texto_questionario"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>
</ScrollView>
